Change root folder in Sass files

--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -12,7 +12,7 @@ section {
 }
 
 #__nuxt {
-	background: #000 url("./assets/img/bg.jpg") center center no-repeat;
+	background: #000 url("~/assets/img/bg.jpg") center center no-repeat;
 	background-size: cover;
 	height: 100vh;
 	left: 0;
