--- a/assets/styles/theme.scss
+++ b/assets/styles/theme.scss
@@ -2,16 +2,16 @@
 	font-family: "Umber";
 	font-weight: 500;
 	font-display: swap;
-	src: url("~/assets/fonts/Umber SSi Regular.woff2") format("woff2"),
-		url("~/assets/fonts/Umber SSi Regular.woff") format("woff");
+	src: url("~/assets/fonts/UmberSSiRegular.woff2") format("woff2"),
+		url("~/assets/fonts/UmberSSiRegular.woff") format("woff");
 }
 
 @font-face {
 	font-family: "Summer";
 	font-weight: 500;
 	font-display: swap;
-	src: url("~/assets/fonts/University Roman Regular.woff2") format("woff2"),
-		url("~/assets/fonts/University Roman Regular.woff") format("woff");
+	src: url("~/assets/fonts/UniversityRomanRegular.woff2") format("woff2"),
+		url("~/assets/fonts/UniversityRomanRegular.woff") format("woff");
 }
 
 $mainColor:#AA0;
