--- a/assets/styles/view.scss
+++ b/assets/styles/view.scss
@@ -41,6 +41,7 @@
 	margin: 20px;
 	max-height: calc(100vh - 40px);
 	opacity: 0;
+	overflow: hidden;
 	transition: opacity 0.6s ease;
 	width: calc(100% - 40px);
 
@@ -97,10 +98,20 @@
 main {
 	background: linear-gradient(to bottom, rgba(#fff, 0) 50%, rgba(#fff, 0.2) 100%);
 	border: 2px solid rgba(#fff, 0.8);
+	border-radius: 0 0 10px 10px;
 	border-top: 0 none;
 	flex: 0 0 calc(80% - 20px);
 	margin-bottom: 20px;
+	max-height: calc(100vh - 220px);
+	overflow: hidden;
 	position: relative;
+
+	&>.inner {
+		height: 100%;
+		max-height: calc(100vh - 220px);
+		overflow-y: auto;
+		width: calc(100% + 17px);
+	}
 
 	section {
 		left: 0;
@@ -111,7 +122,12 @@ main {
 		transition: opacity 0.3s;
 
 		h2 {
+			letter-spacing: 3px;
 			width: 100%;
+		}
+
+		h3 {
+			letter-spacing: 3px;
 		}
 
 		.list {
@@ -249,7 +265,20 @@ main {
 .player {
 	$bgColor: #110;
 	background: linear-gradient(to right, rgba($bgColor, 0) 0%, rgba($bgColor, 0.9) 5%, rgba($bgColor, 0.2) 50%, rgba($bgColor, 0.9) 95%, rgba($bgColor, 0) 100%);
+	bottom: 20px;
 	flex: 0 0 10%;
+	height: 10vh;
+	left: 20px;
+	max-height: 100px;
+	position: fixed;
+	width: calc(100% - 40px);
+
+	.track_title {
+		font-size: 16px;
+		font-weight: bold;
+		letter-spacing: 3px;
+		margin-left: 14px;
+	}
 
 	audio {
 		color: #FFF;
