--- a/assets/styles/view.scss
+++ b/assets/styles/view.scss
@@ -35,15 +35,17 @@
 	}
 }
 
+$bodyMargin:10px;
+
 #global {
 	display: flex;
 	flex-flow: column nowrap;
-	margin: 20px;
-	max-height: calc(100vh - 40px);
+	margin: $bodyMargin;
+	max-height: calc(100vh - #{$bodyMargin * 2});
 	opacity: 0;
 	overflow: hidden;
 	transition: opacity 0.6s ease;
-	width: calc(100% - 40px);
+	width: calc(100% - #{$bodyMargin * 2});
 
 	&.mounted {
 		opacity: 1;
@@ -71,6 +73,7 @@
 		text-align: center;
 		top: 2px;
 		transition: border-color 0.3s;
+		user-select: none;
 		width: 0;
 
 		img {
@@ -83,13 +86,35 @@
 			width: auto;
 		}
 
+		.label {
+			bottom: 0;
+			font-weight: bold;
+			left: 50%;
+			letter-spacing: 3px;
+			opacity: 0;
+			position: absolute;
+			text-shadow: 0px 0px 16px #fff, 0px 0px 12px #fff, 0px 0px 8px #fff;
+			text-transform: capitalize;
+			transform: translate(-50%, 50%) scale(0);
+			transition: opacity 0.3s, transform 0.3s;
+		}
+
 		&.active {
 			border: 2px solid rgba(#fff, 0.8);
 			border-bottom-color: transparent;
+			cursor: pointer;
+			pointer-events: none;
 
 			img {
 				animation: boop 0.3s ease-in-out 0s 1 normal forwards running;
 				filter: drop-shadow(0 0 12px rgba(#FFF, 1));
+			}
+
+			.label {
+				opacity: 1;
+				transform: translate(-50%, 50%) scale(1);
+				transition-delay: 0.15s;
+				transition-duration: 0.15s;
 			}
 		}
 	}
@@ -100,7 +125,7 @@ main {
 	border: 2px solid rgba(#fff, 0.8);
 	border-radius: 0 0 10px 10px;
 	border-top: 0 none;
-	flex: 0 0 calc(80% - 20px);
+	flex: 0 0 calc(80% - #{$bodyMargin});
 	margin-bottom: 20px;
 	max-height: calc(100vh - 220px);
 	overflow: hidden;
@@ -108,7 +133,7 @@ main {
 
 	&>.inner {
 		height: 100%;
-		max-height: calc(100vh - 220px);
+		max-height: calc(100vh - 200px);
 		overflow-y: auto;
 		width: calc(100% + 17px);
 	}
@@ -122,6 +147,7 @@ main {
 		transition: opacity 0.3s;
 
 		h2 {
+			display: none;
 			letter-spacing: 3px;
 			width: 100%;
 		}
@@ -138,9 +164,11 @@ main {
 		}
 
 		.subcategory {
-			display: inline-flex;
+			display: flex;
 			flex-flow: column nowrap;
 			width: 100%;
+			page-break-inside: avoid;
+			break-inside: avoid-column;
 		}
 
 		&.active {
@@ -157,11 +185,12 @@ main {
 		font-size: 12px;
 		margin-bottom: 0.4em;
 		overflow: hidden;
-		padding: 0.6em 1em;
+		padding: 0.6em;
 		transition: background 0.3s;
+		user-select: none;
 
 		.label {
-			flex: 0 0 80%;
+			flex: 0 0 90%;
 			z-index: 10;
 		}
 
@@ -265,19 +294,19 @@ main {
 .player {
 	$bgColor: #110;
 	background: linear-gradient(to right, rgba($bgColor, 0) 0%, rgba($bgColor, 0.9) 5%, rgba($bgColor, 0.2) 50%, rgba($bgColor, 0.9) 95%, rgba($bgColor, 0) 100%);
-	bottom: 20px;
+	bottom: $bodyMargin;
 	flex: 0 0 10%;
 	height: 10vh;
-	left: 20px;
+	left: $bodyMargin;
 	max-height: 100px;
 	position: fixed;
-	width: calc(100% - 40px);
+	width: calc(100% - #{$bodyMargin * 2});
 
 	.track_title {
 		font-size: 16px;
 		font-weight: bold;
 		letter-spacing: 3px;
-		margin-left: 14px;
+		margin: 4px 0 0 14px;
 	}
 
 	audio {
@@ -292,7 +321,7 @@ main {
 		&::-webkit-media-controls-timeline {
 			background-color: rgba(#444, 0.6);
 			border-radius: 1000px;
-			margin: 0 20px;
+			margin: 0 #{$bodyMargin * 2};
 		}
 
 		&::-webkit-media-controls-volume-control-container {
@@ -303,7 +332,7 @@ main {
 		&::-webkit-media-controls-play-button {
 			background-color: #666;
 			border-radius: 1000px;
-			margin-right: 20px;
+			margin-right: #{$bodyMargin * 2};
 		}
 
 		&::-webkit-media-controls-current-time-display {
