--- a/assets/styles/view.scss
+++ b/assets/styles/view.scss
@@ -64,12 +64,13 @@ $bodyMargin:10px;
 
 	.tab {
 		border: 2px solid transparent;
+		border-width: 2px 0;
 		border-color: transparent transparent rgba(#fff, 0.8);
 		border-radius: 10px 10px 0 0;
 		cursor: pointer;
 		display: block;
 		flex: 1 1 0;
-		padding: 20px;
+		padding: 20px 22px;
 		text-align: center;
 		top: 2px;
 		transition: border-color 0.3s;
@@ -104,6 +105,7 @@ $bodyMargin:10px;
 			border-bottom-color: transparent;
 			cursor: pointer;
 			pointer-events: none;
+			padding: 20px;
 
 			img {
 				animation: boop 0.3s ease-in-out 0s 1 normal forwards running;
@@ -207,6 +209,7 @@ main {
 			top: 50%;
 			transform: translateY(-50%);
 			transition: opacity 0.3s;
+			text-shadow: 1px 1px 2px #000, 1px 1px 2px #000;
 			width: 1.8em;
 
 			&.int_1 {
