--- a/assets/styles/view.scss
+++ b/assets/styles/view.scss
@@ -64,9 +64,9 @@ $bodyMargin:10px;
 
 	.tab {
 		border: 2px solid transparent;
-		border-width: 2px 0;
 		border-color: transparent transparent rgba(#fff, 0.8);
 		border-radius: 10px 10px 0 0;
+		border-width: 2px 0;
 		cursor: pointer;
 		display: block;
 		flex: 1 1 0;
@@ -103,9 +103,9 @@ $bodyMargin:10px;
 		&.active {
 			border: 2px solid rgba(#fff, 0.8);
 			border-bottom-color: transparent;
-			cursor: pointer;
-			pointer-events: none;
+			cursor: default;
 			padding: 20px;
+			user-select: none;
 
 			img {
 				animation: boop 0.3s ease-in-out 0s 1 normal forwards running;
@@ -206,10 +206,10 @@ main {
 			place-items: center;
 			position: absolute;
 			right: 0.6em;
+			text-shadow: 1px 1px 2px #000, 1px 1px 2px #000;
 			top: 50%;
 			transform: translateY(-50%);
 			transition: opacity 0.3s;
-			text-shadow: 1px 1px 2px #000, 1px 1px 2px #000;
 			width: 1.8em;
 
 			&.int_1 {
