--- a/assets/styles/view.scss
+++ b/assets/styles/view.scss
@@ -102,7 +102,7 @@ $bodyMargin:10px;
 
 		&.active {
 			border: 2px solid rgba(#fff, 0.8);
-			border-bottom-color: transparent;
+			border-bottom-color: transparent !important;
 			cursor: default;
 			padding: 20px;
 			user-select: none;
@@ -119,6 +119,17 @@ $bodyMargin:10px;
 				transition-duration: 0.15s;
 			}
 		}
+
+	}
+}
+
+@keyframes fadeIn {
+	0% {
+		opacity: 0;
+	}
+
+	100% {
+		opacity: 1;
 	}
 }
 
@@ -134,19 +145,32 @@ main {
 	position: relative;
 
 	&>.inner {
+		display: flex;
 		height: 100%;
-		max-height: calc(100vh - 200px);
+		max-height: calc(100vh - 220px);
 		overflow-y: auto;
 		width: calc(100% + 17px);
 	}
 
+	.list {
+		align-content: flex-start;
+		align-items: flex-start;
+
+		display: flex;
+		flex-flow: column wrap;
+		max-height: 100%;
+		overflow-x: auto;
+		width: 100%;
+
+	}
+
 	section {
-		left: 0;
-		opacity: 0;
+		animation: fadeIn 0.6s ease 0s forwards running;
+		margin: 0;
 		padding: 20px;
-		position: absolute;
-		top: 0;
+		position: relative;
 		transition: opacity 0.3s;
+		width: calc(20% - 1px);
 
 		h2 {
 			display: none;
@@ -158,12 +182,6 @@ main {
 			letter-spacing: 3px;
 		}
 
-		.list {
-			display: block;
-			overflow-x: auto;
-			width: 100%;
-			columns: 2;
-		}
 
 		.subcategory {
 			display: flex;
@@ -171,11 +189,6 @@ main {
 			width: 100%;
 			page-break-inside: avoid;
 			break-inside: avoid-column;
-		}
-
-		&.active {
-			opacity: 1;
-			position: relative;
 		}
 	}
 
@@ -356,13 +369,13 @@ main {
 }
 
 @media (min-width:600px) {
-	main section .list {
-		columns: 3;
+	main .list {
+		/* columns: 3; */
 	}
 }
 
 @media (min-width:1200px) {
-	main section .list {
-		columns: 5;
+	main .list {
+		/* columns: 5; */
 	}
 }
